@@ -1,5 +1,7 @@
 2010-12-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
+	* src/tests/Makefile.am: Fixed FTBFS on linux.
+
 	* src/tests/testQueryPlan.cpp: Fixed FTBFS of testsuite.
 	* src/tests/testMatch.cpp: Likewise.
 	* src/tests/testGraphProp.cpp: Likewise.
